# omnivia-local

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml
data/: .gitignore
ops/: CONTEXT_BUDGET.md  (+4 more)
services/omnivia-memory/: README.md  pyproject.toml
services/omnivia-memory/docs/quality/reviews/: 2026-06-01-1010-peer-review.md
services/omnivia-memory/src/omnivia_memory/: __init__.py
services/omnivia-memory/src/omnivia_memory/cli/: __init__.py  commands.py
services/omnivia-memory/src/omnivia_memory/consolidation/: README.md  __init__.py  models.py  service.py
services/omnivia-memory/src/omnivia_memory/graph/: __init__.py  models.py  repository.py  search_models.py  search_service.py  service.py
services/omnivia-memory/src/omnivia_memory/ingestion/: __init__.py  chunker.py  extractors.py  models.py  pipeline.py  repositories.py  scanner.py
services/omnivia-memory/src/omnivia_memory/lifecycle/: __init__.py  models.py  rules.py
services/omnivia-memory/src/omnivia_memory/mcp/: __init__.py  server.py
services/omnivia-memory/src/omnivia_memory/memory/: __init__.py  models.py  service.py
services/omnivia-memory/src/omnivia_memory/pattern/: README.md  __init__.py  models.py  repository.py  service.py
services/omnivia-memory/tests/: __init__.py  test_cli.py  test_consolidation.py  test_graph.py  test_ingestion.py  test_lifecycle.py  test_mcp.py  test_memory.py  test_pattern.py  test_persistence.py  test_provenance.py  test_search.py
services/omnivia-memory/tests/fixtures/: sample.md
(+90 files in other folders)
