[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnivia-memory"
version = "0.1.0"
description = "OmniVia Dev Phase 1: local memory and persistence core for AI coding agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "mcp>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
omnivia-memory = "omnivia_memory.cli:main"
omnivia-memory-mcp = "omnivia_memory.mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

